# opensky-datashader

./: .coveragerc  .gitignore  .travis.yml  Pipfile  README.md  environment.yml  pyproject.toml
scripts/: export_db_to_hdf5.py  make_db.py
tests/: context.py  test_export_df_to_hdf5.py  test_make_db.py
