[tool.poetry]
name = "opensky-datashader"
version = "0.1.0"
description = "Snippets that show how to use the OpenSky REST API."
authors = ["Giacomo Debidda <jackdebidda@gmail.com>"]
license = "MIT"
repository = "https://github.com/jackdbd/opensky-datashader"
homepage = "https://github.com/jackdbd/opensky-datashader"
keywords = ['python', 'datashader', 'opensky']

[tool.poetry.dependencies]
Cartopy = "^0.18.0"
Cython = "^0.29.21"
holoviews = "^1.13.4"
pandas = "^1.1.2"
python = "~3.8.5"
requests = "^2.24.0"
SQLAlchemy = "^1.3.19"
tables = "^3.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
poethepoet = "^0.8.0"
pylint = "^2.6.0"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
lxml = "^4.5.2"

[tool.poe.tasks]
coverage = "python -m http.server --directory htmlcov"
export_db = "python scripts/export_db_to_hdf5.py"
format = "poetry run black ."
lint = "pylint scripts"
mkdb = "python scripts/make_db.py"
test = "pytest -v --cov=scripts/ tests/"
test_coverage = "pytest -v --cov=scripts/ tests/ --cov-report=html"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
